--- a/index.html
+++ b/index.html
@@ -116,9 +116,21 @@
           আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে
           অন্য একটি Level এ
         </p>
-        <form class="flex-col" action="">
-          <input type="text" name="" placeholder="Enter your name" id="" />
-          <input type="password" placeholder="********" name="" id="" />
+        <form class="flex flex-col justify-center items-center md:items-start" action="">
+          <input
+            class="block mb-3 w-48 border-gray-400"
+            type="text"
+            name=""
+            placeholder="Enter your name"
+            id=""
+          />
+          <input
+            class="block w-48 border-gray-400"
+            type="password"
+            placeholder="********"
+            name=""
+            id=""
+          />
         </form>
         <button class="mt-3 btn btn-primary bg-[#422ad5]">Get Started</button>
       </div>
@@ -126,5 +138,17 @@
         <img src="./assets/hero-student.png" alt="" />
       </div>
     </section>
+
+    <!-- Let's Learn Vocabulary -->
+    <section class="mt-10">
+      <h2 class="text-4xl font-bold mb-8 text-center">
+        <span class="text-sky-400">Let's</span> Learn Vocabularies
+      </h2>
+
+      <div id="level-container" class="flex gap-5 flex-wrap justify-center"></div>
+    </section>
+
+
+    <script src="script/index.js"></script>
   </body>
 </html>
