--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
           আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে
           অন্য একটি Level এ
         </p>
-        <form class="flex flex-col justify-center items-center md:items-start" action="">
+        <form
+          class="flex flex-col justify-center items-center md:items-start"
+          action=""
+        >
           <input
             class="block mb-3 w-48 border-gray-400"
             type="text"
@@ -145,9 +148,11 @@
         <span class="text-sky-400">Let's</span> Learn Vocabularies
       </h2>
 
-      <div id="level-container" class="flex gap-5 flex-wrap justify-center"></div>
+      <div
+        id="level-container"
+        class="flex gap-5 flex-wrap justify-center"
+      ></div>
     </section>
-
 
     <script src="script/index.js"></script>
   </body>
