--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
           action=""
         >
           <input
-            class="block mb-3 w-48 border-gray-400"
+            class="block mb-3 w-48 border-gray-400 rounded-sm"
             type="text"
             name=""
             placeholder="Enter your name"
             id=""
           />
           <input
-            class="block w-48 border-gray-400"
+            class="block w-48 border-gray-400 rounded-sm"
             type="password"
             placeholder="********"
             name=""
@@ -153,6 +153,12 @@
         class="flex gap-5 flex-wrap justify-center"
       ></div>
     </section>
+
+    <!-- Vocabulary Card -->
+    <section
+      id="word-container"
+      class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5"
+    ></section>
 
     <script src="script/index.js"></script>
   </body>
