--- a/index.html
+++ b/index.html
@@ -158,7 +158,16 @@
     <section
       id="word-container"
       class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5"
-    ></section>
+    >
+      <div
+        class="text-center rounded-xl py-10 space-y-6 col-span-full font-bangla"
+      >
+        <p class="text-xl font-medium text-gray-400">
+          আপনি এখনো কোন Lesson Select করেন নি
+        </p>
+        <h2 class="font-bold text-4xl">একটি Lesson Select করুন।</h2>
+      </div>
+    </section>
 
     <script src="script/index.js"></script>
   </body>
