--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
           action=""
         >
           <input
-            class="block mb-3 w-48 border-gray-400 rounded-sm"
+            class="block pl-1 mb-3 w-48 border-gray-400 rounded-sm"
             type="text"
             name=""
             placeholder="Enter your name"
             id=""
           />
           <input
-            class="block w-48 border-gray-400 rounded-sm"
+            class="block pl-1 w-48 border-gray-400 rounded-sm"
             type="password"
             placeholder="********"
             name=""
