--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
       ></div>
     </section>
 
+<!-- spinner section loading button -->
+ <section class="flex justify-center items-center py-10">
+  <span class="loading loading-bars loading-xl"></span>
+ </section>
+
+
     <!-- Vocabulary Card -->
     <section
       id="word-container"
