--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </section>
 
 <!-- spinner section loading button -->
- <section class="flex justify-center items-center py-10">
+ <section id="spinner" class="flex justify-center items-center py-10 hidden">
   <span class="loading loading-bars loading-xl"></span>
  </section>
 
