--- a/index.html
+++ b/index.html
@@ -154,11 +154,24 @@
       ></div>
     </section>
 
-<!-- spinner section loading button -->
- <section id="spinner" class="flex justify-center items-center py-10 hidden">
-  <span class="loading loading-bars loading-xl"></span>
- </section>
+    <!-- spinner section loading button -->
+    <section id="spinner" class="flex justify-center items-center py-10 hidden">
+      <span class="loading loading-bars loading-xl"></span>
+    </section>
 
+    <!-- Search Button -->
+    <section class="flex justify-center mt-8">
+      <div class="join">
+        <div>
+          <label class="input validator join-item">
+            <input id="input-search" type="text" placeholder="Search Vocabulary Now" required />
+          </label>
+        </div>
+        <button id="btn-search" class="btn btn-primary join-item">
+          Search
+        </button>
+      </div>
+    </section>
 
     <!-- Vocabulary Card -->
     <section
@@ -179,9 +192,7 @@
     <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
     <dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
       <div class="modal-box">
-        <div id="details-container" class="space-y-5">
-        
-        </div>
+        <div id="details-container" class="space-y-5"></div>
         <div class="modal-action">
           <form method="dialog">
             <!-- if there is a button in form, it will close the modal -->
