--- a/index.html
+++ b/index.html
@@ -164,7 +164,12 @@
       <div class="join">
         <div>
           <label class="input validator join-item">
-            <input id="input-search" type="text" placeholder="Search Vocabulary Now" required />
+            <input
+              id="input-search"
+              type="text"
+              placeholder="Search Vocabulary Now"
+              required
+            />
           </label>
         </div>
         <button id="btn-search" class="btn btn-primary join-item">
@@ -176,7 +181,7 @@
     <!-- Vocabulary Card -->
     <section
       id="word-container"
-      class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5"
+      class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-1 md:grid-cols-3 gap-5"
     >
       <div
         class="text-center rounded-xl py-10 space-y-6 col-span-full font-bangla"
