--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
 
     <!-- Search Button -->
-    <section class="flex justify-center mt-8">
+    <section class="flex justify-center mt-8 sm:w-5/6 sm:mx-auto">
       <div class="join">
         <div>
           <label class="input validator join-item">
